--- a/src/element-variables.scss
+++ b/src/element-variables.scss
@@ -3,9 +3,11 @@ Write your variables here. All available variables can be
 found in element-plus/packages/theme-chalk/src/common/var.scss.
 For example, to overwrite the theme color:
 */
-$--color-primary: hotpink;
+$--el-color-primary: #5ddac8;
+@forward 'element-plus/theme-chalk/src/common/var.scss' with (
+$colors: ('primary': ( // 主色
+            'base': $--el-color-primary,
+        ),
+    ));
+@import "~element-plus/theme-chalk/src/var";
 
-/* icon font path, required */
-$--font-path: '~element-plus/lib/theme-chalk/fonts';
-
-@import "~element-plus/packages/theme-chalk/src/index";
