--- a/src/global.scss
+++ b/src/global.scss
@@ -3,10 +3,10 @@ Write your variables here. All available variables can be
 found in element-plus/packages/theme-chalk/src/common/var.scss.
 For example, to overwrite the theme color:
 */
-$--el-color-primary: #5ddac8;
+$--color-primary: #5ddac8;
 @forward 'element-plus/theme-chalk/src/common/var.scss' with (
 $colors: ('primary': ( // 主色
-            'base': $--el-color-primary,
+            'base': $--color-primary,
         ),
     ));
 @import "~element-plus/theme-chalk/src/var";
