--- a/src/global.scss
+++ b/src/global.scss
@@ -9,5 +9,14 @@ $colors: ('primary': ( // 主色
             'base': $--color-primary,
         ),
     ));
-@import "~element-plus/theme-chalk/src/var";
 
+:root {
+  --app-background-color: #f5f5f5;
+  --font-familt: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+body {
+  background-color: var(--app-background-color);
+  font-family: var(--font-familt), serif;
+  transition: background-color 0.3s ease;
+}
