--- a/src/global.scss
+++ b/src/global.scss
@@ -12,11 +12,11 @@ $colors: ('primary': ( // 主色
 
 :root {
   --app-background-color: #f5f5f5;
-  --font-familt: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 body {
   background-color: var(--app-background-color);
-  font-family: var(--font-familt), serif;
+  font-family: var(--font-family), serif;
   transition: background-color 0.3s ease;
 }
