--- a/src/global.scss
+++ b/src/global.scss
@@ -19,4 +19,5 @@ body {
   background-color: var(--app-background-color);
   font-family: var(--font-family), serif;
   transition: background-color 0.3s ease;
+  color: var(--el-text-color-regular);
 }
